// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no stats yet 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
              "marginLeft": 4,
            }
          }
        >
          Chicken1
        </Styled(H2)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 180,
              "width": 180,
            }
          }
        />
      </TouchableOpacity>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
            "marginLeft": 8,
          }
        }
      >
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Breed"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Cuckoo Maran
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Hatched"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Oct 5, 2016
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Age"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            1y 11m
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Gender"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Female
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)>
      <Separator
        text="CHICKEN STATS"
      />
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Total Eggs Laid
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            0
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Last Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            --
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Longest Streak
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            0 days
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Heaviest Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            --
             grams
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Separator
        text="PAST 7 DAYS"
      />
      <Styled(ViewNB)
        style={
          Object {
            "flexDirection": "row",
            "width": "100%",
          }
        }
      />
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly when no weight yet 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
              "marginLeft": 4,
            }
          }
        >
          Chicken1
        </Styled(H2)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 180,
              "width": 180,
            }
          }
        />
      </TouchableOpacity>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
            "marginLeft": 8,
          }
        }
      >
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Breed"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Cuckoo Maran
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Hatched"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Oct 5, 2016
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Age"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            1y 11m
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Gender"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Female
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)>
      <Separator
        text="CHICKEN STATS"
      />
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Total Eggs Laid
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            1
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Last Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            --
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Longest Streak
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            0 days
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Heaviest Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            --
             grams
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Separator
        text="PAST 7 DAYS"
      />
      <Styled(ViewNB)
        style={
          Object {
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Styled(ViewNB)
          key="2018-10-06"
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomWidth": 1,
                "borderColor": "#ddd",
                "borderLeftWidth": 1,
                "borderTopWidth": 1,
                "padding": 5,
                "width": "14.2857%",
              },
              Object {
                "backgroundColor": "#c9f5d6",
              },
              Object {
                "borderColor": "#ddd",
                "borderRightWidth": 1,
              },
            ]
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Oct
          </Styled(Text)>
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            6
          </Styled(Text)>
          <Styled(ViewNB)>
            <Styled(Icon)
              name="checkmark-circle"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            />
          </Styled(ViewNB)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: ChickenRenderer test ChickenRenderer should render correctly with all stats available 1`] = `
<Styled(Container)>
  <withNavigation(Header)
    eggButton={true}
    goBackButton="Flock"
    title="Chicken"
  />
  <Styled(Content)>
    <ImageViewer
      showModal={true}
      toggleModal={[Function]}
      url="https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180"
    />
    <Styled(ViewNB)
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Styled(H2)
          style={
            Object {
              "fontSize": 20,
              "fontWeight": "bold",
              "marginLeft": 4,
            }
          }
        >
          Chicken1
        </Styled(H2)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={true}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropleft-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)>
        <Styled(Button)
          dark={true}
          disabled={false}
          onPress={[Function]}
          transparent={true}
        >
          <Styled(Icon)
            name="arrow-dropright-circle"
          />
        </Styled(Button)>
      </Styled(ViewNB)>
      <Styled(ViewNB)
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Styled(Button)
          dark={true}
          transparent={true}
        >
          <Styled(Icon)
            active={true}
            name="more"
            style={
              Object {
                "fontSize": 30,
              }
            }
          />
        </Styled(Button)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Image
          source={
            Object {
              "uri": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
            }
          }
          style={
            Object {
              "height": 180,
              "width": 180,
            }
          }
        />
      </TouchableOpacity>
      <Styled(ViewNB)
        style={
          Object {
            "flex": 1,
            "marginLeft": 8,
          }
        }
      >
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Breed"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Cuckoo Maran
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Hatched"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Oct 5, 2016
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Age"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            1y 11m
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <CommonLabel
            style={
              Object {
                "fontWeight": "bold",
              }
            }
            text="Gender"
          />
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "height": 20,
              }
            }
          >
            Female
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)>
      <Separator
        text="CHICKEN STATS"
      />
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Total Eggs Laid
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            1
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Last Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            --
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Longest Streak
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            0 days
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Styled(ListItem)>
        <Styled(ViewNB)
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Styled(Text)>
            Heaviest Egg
          </Styled(Text)>
        </Styled(ViewNB)>
        <Styled(ViewNB)>
          <Styled(Text)>
            88.1
             grams
          </Styled(Text)>
        </Styled(ViewNB)>
      </Styled(ListItem)>
      <Separator
        text="PAST 7 DAYS"
      />
      <Styled(ViewNB)
        style={
          Object {
            "flexDirection": "row",
            "width": "100%",
          }
        }
      >
        <Styled(ViewNB)
          key="2018-10-06"
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderBottomWidth": 1,
                "borderColor": "#ddd",
                "borderLeftWidth": 1,
                "borderTopWidth": 1,
                "padding": 5,
                "width": "14.2857%",
              },
              Object {
                "backgroundColor": "#c9f5d6",
              },
              Object {
                "borderColor": "#ddd",
                "borderRightWidth": 1,
              },
            ]
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            Oct
          </Styled(Text)>
          <Styled(Text)
            style={
              Object {
                "color": "#575757",
                "fontSize": 16,
                "fontWeight": "bold",
              }
            }
          >
            6
          </Styled(Text)>
          <Styled(ViewNB)>
            <Styled(Icon)
              name="checkmark-circle"
              style={
                Object {
                  "fontSize": 20,
                }
              }
            />
          </Styled(ViewNB)>
        </Styled(ViewNB)>
      </Styled(ViewNB)>
    </Styled(ViewNB)>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`Chicken component: Should render correctly when chicken ID passed in 1`] = `
<ChickenRenderer
  chicken={
    Object {
      "breed": "Cuckoo Maran",
      "hatched": "2016-10-05",
      "name": "Chicken1",
      "photoPath": "uploads/user:user1/flock:flock1/1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "photoUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2F1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=029f7593-9ed3-481e-8dc6-5d3c38844180",
      "thumbnailPath": "uploads/user:user1/flock:flock1/thumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg",
      "thumbnailUrl": "https://firebasestorage.googleapis.com/v0/b/cluckr-prod.appspot.com/o/uploads%2Fuser%3AvEFMHqRcozMSriuqeJNKlCXnGMr2%2Fflock%3Aflock1%2Fthumb_1BD434AA-4A5D-40A9-A97A-C3D64FC8B841.jpeg?alt=media&token=689dfae8-c034-46ae-9984-db5c4ee3fe72",
    }
  }
  chickenId="chicken1"
  error={null}
  handleMoreOptions={[Function]}
  heaviest={true}
  navigation={
    Object {
      "getParam": [MockFunction] {
        "calls": Array [
          Array [
            "chickenId",
            "NO-ID",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "chicken1",
          },
        ],
      },
    }
  }
  nextChickenId="chicken2"
  prevChickenId={null}
  showModal={false}
  stats={
    Object {
      "heaviest": Object {
        "chickenId": "chicken1",
        "chickenName": "Chicken1",
        "date": "2018-02-13",
        "modified": "2018-02-13T13:45:46.640Z",
        "userId": "user1",
        "weight": "73.5",
      },
      "lastEgg": "2018-05-13",
      "lastSevenDays": Object {
        "2018-05-09": 1,
        "2018-05-10": 0,
        "2018-05-11": 1,
        "2018-05-12": 1,
        "2018-05-13": 1,
        "2018-05-14": 0,
        "2018-05-15": 0,
      },
      "longestStreak": 10,
      "total": 78,
    }
  }
  toggleModal={[Function]}
  topProducer={true}
/>
`;

exports[`Chicken component: Should render correctly when chicken not found 1`] = `
<Styled(Text)>
  Chicken with ID chicken5 not found
</Styled(Text)>
`;

exports[`Chicken component: Should render correctly when no chicken ID passed in 1`] = `
<Styled(Text)>
  No Chicken ID passed in!
</Styled(Text)>
`;
